# inspection-multi-grilles

inspection-officine/: .gitignore  README.md  TESTS.md  package-lock.json  package.json  vitest.config.ts
inspection-officine/src/: index.html
inspection-officine/src-tauri/: Cargo.toml  tauri.conf.json
inspection-officine/src-tauri/capabilities/: default.json
inspection-officine/src-tauri/src/: audit.rs  db.rs  grid.rs  main.rs  storage.rs  users.rs
inspection-officine/src-tauri/src/grids/: grossiste.rs  mod.rs  officine.rs
inspection-officine/src/lib/: api.js  auth.js  export.js  inspections.js  kpi.js  validation.js
inspection-officine/tests/: api.test.js  auth.test.js  export.test.js  inspections.test.js  kpi.test.js  validation.test.js
